# cmake-bootstrap

./: .travis.yml  CMakeLists.txt  README.md  create.sh
ext/: CMakeLists.txt
src/: CMakeLists.txt  Foo.cpp  Foo.h  FooMain.cpp  Main.cpp  Template.cpp  Template.hpp
test/: AllTests.cpp  CMakeLists.txt  FooTest.cpp  Main.cpp  TemplateTest.cpp
